dnl configure.in for libevent
dnl Ding Peilong <77676182@qq.com>

AC_INIT(event.c)

dnl Checks for programs.
AC_PROG_CC	
AC_PROG_RANLIB

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_CHECK_FUNCS(select)

AC_OUTPUT(Makefile sample/Makefile)
